# test_ws

./: .gitignore  .gitmodules
src/my_robot_description/: CMakeLists.txt  package.xml
src/testbot_description/: CMakeLists.txt  README.md  package.xml
src/testbot_description/launch/: display.launch  gazebo.launch  testbot.launch
src/testbot_description/rviz/: testbot.rviz
src/testbot_description/scripts/: tf_broadcaster.py
src/testbot_description/urdf/: test_robot.gv  testbot.urdf  testbot.urdf.xacro  testbot_gazebo.urdf.xacro
src/testbot_description/worlds/: testbot_world.world
