<?xml version="1.0"?>
<package format="2">
  <name>testbot_description</name>
  <version>0.0.0</version>
  <description>TurtleBot2 with YDLiDAR and RGB Camera</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>tf</depend>
  <depend>rviz</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>

</package>
